########################################
# Page Analyzer in progress
########################################
- added Login / Logout functionality
- added rule paetags
- added H2 Database
- added Result History
- added Result View
- added Comparison View

########################################
# Page Analyzer v 0.9
########################################
- added rule paurllength
- custom.js: fixed decodeURIComponent errors
- code cleanups
- fixed log format
- Analyze URL: fixed return previous result
- Analyze URL: Increased stability
- fixed first analysis returns nothing.
- support multi-threading 
- Add thread count configuration
- add redirect to base path
- fixed handling quotes in javascript errors.

########################################
# Page Analyzer v 0.8
########################################
- Added exception propagation for to end user for exceptions thrown by custom_yslow.js
- Rule paduplicatedrequests: Check for duplicated requests
- Fixed YSlow "ignoring" duplicated requests

########################################
# Page Analyzer v 0.7
########################################
- Added custom content possibilities
- YSlow: decode URLs reverted as causing issues

########################################
# Page Analyzer v 0.6
########################################
- Analyze URL, use PhantomJS to get HAR JSON string
- YSlow: decode URLs and add page time to result

########################################
# Page Analyzer v 0.5
########################################
- Initial Version
- HAR Upload 
- REST API for HAR Upload