@@ -14,6 +14,16 @@ pa_enable_authentication=false
 pa_analysis_threads=10
 
 ############################################################
+# Database Settings
+############################################################
+#pa_h2_store_path=C:/temp/h2store
+pa_h2_store_path=./datastore/h2database
+pa_h2_store_port=8889
+
+pa_h2_username=sa
+pa_h2_password=sa
+
+############################################################
 # PageAnalyzer Settings
 ############################################################
 pa_application_name=pageanalyzer
